[gd_scene load_steps=5 format=3 uid="uid://o53ho62o46op"]

[ext_resource type="Script" path="res://scenes_2/character_card.gd" id="1_rh0e8"]
[ext_resource type="FontFile" uid="uid://bhjgpy1dovmyq" path="res://addons/gut/fonts/CourierPrime-Bold.ttf" id="2_d0rpr"]
[ext_resource type="PackedScene" uid="uid://c3u2j5xiskdoh" path="res://scenes_2/QuantityBar.tscn" id="3_3gp0y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qi5c4"]
bg_color = Color(0.23, 0.23, 0.23, 1)

[node name="CharacterCard" type="Control"]
custom_minimum_size = Vector2(64, 130)
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 130.0
script = ExtResource("1_rh0e8")

[node name="Vertical" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Vertical"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 4

[node name="Panel" type="Panel" parent="Vertical/TextureRect"]
z_index = -10
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NameLabel" type="Label" parent="Vertical"]
z_index = 10
layout_mode = 2
theme_override_colors/font_color = Color(0.920995, 0.920995, 0.920995, 1)
theme_override_fonts/font = ExtResource("2_d0rpr")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Vertical/NameLabel"]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qi5c4")

[node name="StatsContainer" type="VBoxContainer" parent="Vertical"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HpBar" parent="Vertical/StatsContainer" instance=ExtResource("3_3gp0y")]
layout_mode = 2

[node name="ManaBar" parent="Vertical/StatsContainer" instance=ExtResource("3_3gp0y")]
layout_mode = 2

[node name="ForceBar" parent="Vertical/StatsContainer" instance=ExtResource("3_3gp0y")]
layout_mode = 2

[node name="IntBar" parent="Vertical/StatsContainer" instance=ExtResource("3_3gp0y")]
layout_mode = 2

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"FlatButton"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
